# aoc

./: .gitignore  Cargo.toml  README.md
benches/: benches.rs  benches22.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day14b.rs  day15.rs  day16.rs  day17.rs  day18.rs  template.rs
src/: input.rs  lib.rs
src/solutions/: mod.rs
src/solutions/year2020/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day07_graphlib.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day14b.rs  day15.rs  day16.rs  day17.rs  day17b.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs  template.rs
src/solutions/year2022/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day05b.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day12_dijkstra.rs  day13.rs  day14.rs  day15.rs  mod.rs
