[package]
name = "aoc"
version = "0.1.0"
authors = ["dialtone <dialtone@adroll.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bench]]
name = "day01"
harness = false

[[bench]]
name = "day02"
harness = false

[[bench]]
name = "day03"
harness = false

[[bench]]
name = "day04"
harness = false

[[bench]]
name = "day05"
harness = false

[[bench]]
name = "day06"
harness = false

[[bench]]
name = "day07"
harness = false

[[bench]]
name = "day08"
harness = false

[[bench]]
name = "day09"
harness = false

[[bench]]
name = "day10"
harness = false

[[bench]]
name = "day11"
harness = false

[[bench]]
name = "day12"
harness = false

[[bench]]
name = "day13"
harness = false

[[bench]]
name = "day14"
harness = false

[[bench]]
name = "day14b"
harness = false

[[bench]]
name = "day15"
harness = false

[dependencies]
reqwest = { version = "0.10", features = [ "blocking", "gzip", "cookies" ] }
thiserror = "1.0"
itertools = "0.9"
regex = "1"
bytecount = "0.6"
lazy_static = "1.4"
serde_scan = "0.4.1"
num = "0.3"
petgraph = "0.5"
num-integer = "0.1"

[dev-dependencies]
criterion = "0.3"
